Fixed z-index for offer-details x button.

--- a/src/app/modules/offers/components/offer-details/offer-details.component.scss
+++ b/src/app/modules/offers/components/offer-details/offer-details.component.scss
@@ -4,6 +4,7 @@
     .close-btn {
         color: $primary-alt-color;
         cursor: pointer;
+        z-index: 1;
         position: absolute;
         top: 1rem;
         right: 2rem;
